# hermes

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  history.rs  http_client.rs  imports.rs  lib.rs  main.rs  models.rs  secrets.rs  variables.rs  workspace.rs
