[package]
name = "hermes"
version = "0.1.0"
description = "A local, Git-friendly API client."
authors = ["Hermes contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "hermes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shell-words = "1"
tauri = { version = "2.11.2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
